[project]
name = "jfrog-mcp-coral-agent"
version = "0.1.0"
description = "JFrog MCP Coral Agent for managing Artifactory repositories and resources"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",
    "anyio>=4.0.0",
    "urllib3>=2.0.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
